# docs/swagger.json
@@ -4,9 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/user/create": {
+        "/api/user/create": {
             "post": {
-                "description": "hello echo",
+                "description": "用户创建",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,9 +27,9 @@
                 }
             }
         },
-        "/user/details": {
+        "/api/user/details": {
             "get": {
-                "description": "hello echo",
+                "description": "用户详情",
                 "consumes": [
                     "application/json"
                 ],
@@ -44,7 +44,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Result"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.User"
+                            }
                         }
                     }
                 }
@@ -52,6 +55,39 @@
         }
     },
     "definitions": {
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "create_at": {
+                    "description": "创建时间",
+                    "type": "integer"
+                },
+                "id": {
+                    "description": "ID",
+                    "type": "integer"
+                },
+                "nickname": {
+                    "description": "用户呢称",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "手机号",
+                    "type": "string"
+                },
+                "updated_at": {
+                    "description": "更新时间",
+                    "type": "integer"
+                },
+                "username": {
+                    "description": "用户名称",
+                    "type": "string"
+                }
+            }
+        },
         "response.Result": {
             "type": "object",
             "properties": {
